--- a/QuestTemplates/daily-template/base/package.yml
+++ b/QuestTemplates/daily-template/base/package.yml
@@ -43,6 +43,8 @@ events:
   ########
   ## IO ##
   ########
+
+  activeQuestNotice: '$activeQuestNotice$'
     
   collectWhisper: '$collectWhisper$'
   collectStartNotice: $collectStartNotice$
