--- a/QuestTemplates/daily-template/package.yml
+++ b/QuestTemplates/daily-template/package.yml
@@ -59,6 +59,8 @@ variables:
   ## IO ##
   ########
 
+  activeQuestNotice: notify &4You already have an active quest in this category! category:daily_task
+
   collectWhisper: 'notify &e&o$action_upper$ &a&o$objective_amount$ &e&o$target$ from the &a&o$world_display$ &e&oworld... io:subtitle'
   collectStartNotice: 'notify &b&oObjective: &e&oThe Oracle asked you to \n&e&o$action_lower$ &a&o$objective_amount$ &e&o$target$ from the &a&o$world_display$ &e&oworld. category:daily_task'
   
@@ -72,7 +74,7 @@ variables:
   ## FOLDERS ##
   #############
 
-  collectStartFolder: 'if startQuestCheck passStartFolderCheck else failStartFolderCheck'
+  collectStartFolder: 'if startQuestCheck passStartFolderCheck else activeQuestNotice'
 
   passStartFolderCheck: folder collectInitFolder,collectWhisper,collectStartNotice period:3
   failStartFolderCheck: notify &4You do not have enough quest points to start another quest!
